⚡️ :: error 수정