@@ -1,22 +1,22 @@
 package com.example.soopgwan.domain.achieve.application;
 
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
 import com.example.soopgwan.domain.achieve.achieves.BaseAchieve;
-import com.example.soopgwan.domain.achieve.enums.AchieveType;
+import com.example.soopgwan.domain.achieve.persistence.enums.AchieveType;
 import com.example.soopgwan.domain.achieve.persistence.Achieve;
 import com.example.soopgwan.domain.achieve.persistence.AchieveSuccess;
 import com.example.soopgwan.domain.achieve.persistence.repository.AchieveRepository;
 import com.example.soopgwan.domain.achieve.persistence.repository.AchieveSuccessRepository;
 import com.example.soopgwan.domain.achieve.persistence.repository.vo.DefaultAchieveVO;
 import com.example.soopgwan.domain.achieve.presentation.dto.response.MyAchieveListResponse;
+import com.example.soopgwan.domain.achieve.presentation.dto.response.MyAchieveListResponse.MyAchieve;
 import com.example.soopgwan.domain.habit.persistence.repository.WeekHabitRepository;
 import com.example.soopgwan.domain.user.persistence.User;
 import com.example.soopgwan.global.util.UserUtil;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -50,13 +50,13 @@ public class AchieveService {
         return new MyAchieveListResponse(achieveSuccessRepository.findAllByUserId(user.getId())
                 .stream()
                 .map(AchieveSuccess::getAchieve)
-                .map(achieve -> MyAchieveListResponse.MyAchieve.builder()
+                .map(achieve -> MyAchieve.builder()
                         .title(achieve.getTitle())
                         .productType(achieve.getProductType())
                         .rarityType(achieve.getRarityType())
                         .content(achieve.getContent())
                         .build())
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     ;
